[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/InputContainer.gd" type="Script" id=1]

[node name="InputContainer" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 14.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 31.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_right = 405.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Type here..."

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 409.0
margin_right = 466.0
margin_bottom = 24.0
disabled = true
text = "Submit"
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
